## Process this file with automake to produce Makefile.in

###############################################################################
##   Copyright © 2005-2011 by Gabriele Svelto                                ##
##   gabriele.svelto@gmail.com                                               ##
##                                                                           ##
##   This file is part of Jelatine.                                          ##
##                                                                           ##
##   Jelatine is free software: you can redistribute it and/or modify        ##
##   it under the terms of the GNU General Public License as published by    ##
##   the Free Software Foundation, either version 3 of the License, or       ##
##   (at your option) any later version.                                     ##
##                                                                           ##
##   Jelatine is distributed in the hope that it will be useful,             ##
##   but WITHOUT ANY WARRANTY; without even the implied warranty of          ##
##   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the           ##
##   GNU General Public License for more details.                            ##
##                                                                           ##
##   You should have received a copy of the GNU General Public License       ##
##   along with Jelatine.  If not, see <http://www.gnu.org/licenses/>.       ##
###############################################################################

ACLOCAL_AMFLAGS = -I m4

SUBDIRS = docs src

EXTRA_DIST = \
    m4/acx_gcc_attribute_unused.m4 \
    m4/acx_gcc_builtin.m4 \
    m4/acx_gcc_func_attribute.m4 \
    m4/acx_func_va_copy.m4 \
    m4/ax_prog_javac.m4 \
    m4/ax_prog_javac_works.m4 \
    m4/ax_prog_jar.m4 \
    m4/ax_pthread.m4 \
    m4/ax_c_float_words_bigendian.m4 \
    m4/ax_tls.m4 \
    m4/pkg.m4 \
    lib/malloc.c \
    lib/memcmp.c \
    lib/memcpy.c \
    lib/memmove.c \
    ChangeLog.old \
    TODO
